@@ -5,7 +5,8 @@
 - Improved: random wallpaper design options
 - Improved: disabled auto backup of settings through Google Drive because different devices require different configurations
 - Improved: internal cleanup of wallpaper engine, maybe solves some crashes
-- Fixed: changed random wallpaper design when toggling dark mode
+- Fixed: changed random wallpaper design when toggling dark mode and after device restart
+- Fixed: bug in language selection caused by duplicated code
 
 ## 5.5.0
 
